--- a/HW3/hasbula.css
+++ b/HW3/hasbula.css
@@ -1,26 +1,39 @@
 @font-face {
-    font-family:airstream ;
+    font-family: airstream;
     src: url(fonts/Airstream-webfont.eot);
     src: url(fonts/Airstream-webfont.woff);
 }
+
 @font-face {
     font-family: lakeshor;
     src: url(fonts/LAKESHOR-webfont.eot);
     src: url(fonts/LAKESHOR-webfont.woff);
 }
 
-html{
+html {
     height: 100%;
 
 }
-body{
+
+body {
+    --thumbnails-image-width: 25vw;
+    --thumbnails-image-height: 15vw;
+    --thumbnails-title-height: calc(var(--thumbnails-image-height) * 0.4);
+    --details-image-width: 60vw;
+    --details-image-height: 50vw;
+    --thumbnails-item-size: calc(var(--details-image-height) + var(--thumbnails-title-height));
+
+}
+
+body {
     height: 100%;
     background-color: black;
     display: flex;
     flex-direction: column;
     margin: 0;
 }
-.logo{
+
+.logo {
     display: block;
     text-align: center;
     background-color: purple;
@@ -28,126 +41,154 @@ body{
     text-transform: uppercase;
     color: white;
     font-family: airstream;
-    
-
 }
-.main-class{
+h2{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.main-class {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    flex-grow: 1;
 
 }
-.details-container{
+
+.details-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 10px;
-    
+    margin-bottom: 2vh;
 
-}    
-.details-image{
-    width: 60vw;
-    height: 40vw;
+
+}
+.details-frame{
+    position: relative;
+}
+
+.details-image {
+    width: var(--details-image-width);
+    height: var(--details-image-height);
     border-radius: 25%;
 }
-.details-title{
+
+.details-title {
     display: block;
     background-color: purple;
     margin-top: 1px;
     color: white;
+    position: absolute;
     font-family: airstream;
+    bottom: 5vh;
+    left: -2vw;
+
 
 }
-.thumbnails-list{
+
+.thumbnails-list {
     display: flex;
     flex-wrap: wrap;
     max-height: 35vh;
     overflow-y: scroll;
     list-style: none;
     justify-content: space-around;
+    padding-left: 0;
+    margin-top: 3vh;
     
-}
-.thumbnails-item{
-    display: block;
-    border: solid 2px blueviolet;
-    margin-top: 2vh;
-    width: 25vw;
-    height: 25vw;
-    border-radius: 20%;
-    overflow: hidden;
-}
-.thumbnails-anchor{
-  display: block;
-  overflow-wrap: break-word;
-  text-decoration: none;
-  color: white;
-  font-family: airstream;
+   
 
 }
-.thumbnails-image{
-    display: block;
-    width: 25vw;
-    height: 16vw;
-    padding: 0px;
-    margin: 0%;
+
+.thumbnails-item {
+    border: solid 2px blueviolet;
+    margin-top: 2vh;
+    width: var(--thumbnails-image-width);
+    min-height: calc(var(--thumbnails-image-height) + var(--thumbnails-title-height));
+    border-radius: 25%;
+    overflow: hidden;
+    margin-left: 1vw;
 }
-.thumbnails-title{
-    height: 15vw;
+.thumbnails-item:hover{
+    transform: scale(1.1);
+}
+
+.thumbnails-anchor {
+    display: block;
+    overflow-wrap: break-word;
+    text-decoration: none;
+    color: white;
+    font-size: xx-small;
+    font-family: airstream;
+
+}
+
+.thumbnails-image {
+    display: block;
+    width: var(--thumbnails-image-width);
+    height: var(--thumbnails-image-height);
+}
+
+.thumbnails-title {
+    height: var(--thumbnails-title-height);
     display: block;
     text-align: center;
     background-color: purple;
-    
-   
-    
+
+
+
 }
-@media (min-width:560px){
-    .main-class{
-        flex-direction: row;
-        align-items: flex-start;
+
+@media (min-width:560px) {
+    body {
+        --thumbnails-image-width: 12vw;
+        --thumbnails-image-height: 8vw;
+        --thumbnails-title-height: calc(var(--thumbnails-image-height) * 0.25);
+        --details-image-width: 45vw;
+        --details-image-height: 35vw;
     }
-    .thumbnails-list{
+
+    .main-class {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    .thumbnails-list {
+        padding-right: 2vw ;
         order: -1;
         flex-direction: column;
         flex-wrap: nowrap;
         max-height: 80vh;
         justify-content: flex-start;
-        
-
     }
-    .thumbnails-item{
-    min-height: 10vw;
+    .logo {
+        height: 15%;
+        text-align: center;
+    }
+
+    .details-container {
+        justify-content: center;
+    }
 }
-.thumbnails-title{
-   min-height: 100vw;
-}
-.logo{
-    height: 15%;
+.details-title {
+    width: 25vw;
     text-align: center;
 }
-.details-container{
-    margin-left: 15vw;
-}
-.details-image{
-    width: 45vw;
-    height: 30vw;
-    border-radius: 25%;
-}
-.thumbnails-image{
-    display: block;
-    width: 15vw;
-    height: 10vw;
-    padding: 0px;
-    margin: 0%;
-}
-.thumbnails-item{
-    display: block;
-    border: solid 2px blueviolet;
-    width: 15vw;
-    min-height: 15vw;
-    border-radius: 25%;
-    overflow: hidden;
-}
-.details-title{
-width: 25vw;
-text-align: center;
-}
+@media (min-width: 1000px) {
+    .details-container {
+        margin-top: 5vh;
+        margin-right: 5vw;
+    }
+    
+    .thumbnails-list {
+        
+        margin-top: 2.5vh;
+        max-height: 86vh;
+    }
+
+    .thumbnails-title {
+        font-size: 1.5em;
+    }
+   
+
 }
