--- a/marvels-field/styles/marvels.css
+++ b/marvels-field/styles/marvels.css
@@ -3,14 +3,18 @@
 
 }
 .letter{
-    margin-top: 2vh;
+    justify-content: center;
+    margin-top: 4vh;
     display: flex;
     flex-direction: row;
     margin-left: 1vw;
     background-color: black;
     color: black;
-    width: 4vw;
-    height: 4vw;
+    width: 5vw;
+    height: 5vw;
+    font-size: 2em;
+    border: 10px;
+    
     
 
 }
@@ -18,4 +22,10 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+#play-again{
+
+    display: block;
+    width: 30vw;
+
 }
